# kloudsentinel

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0a1e655c3a1a_add_job_heartbeats_table.py  35e622664e39_add_quarantine_ownership_metadata.py  39d1adfb086b_create_integrity_tables.py  4e09b0ea2b8f_add_security_intelligence_engine_tables.py  504b928e5594_add_remediation_actions.py  5183d1a759e4_create_discovery_tables.py  5538610004bd_create_inventory_tables.py  680ad7c94328_add_forensic_metadata_to_security_.py  b344d91fb4a6_create_api_keys_table.py  b85534b48afb_add_admin_dashboard_auth_tables.py  c24b516cab23_add_wordpress_security_engine_tables.py  db221e4eed0d_create_configuration_items_table.py
docker/: Dockerfile  entrypoint.sh
docs/architecture/decisions/: 0001-v1-deployment-privilege-and-mode.md  0002-whm-plugin-internal-only-backend.md
docs/deployment/: bare-metal-almalinux.md
scripts/: install.sh  sentinel.env.example  uninstall.sh
scripts/systemd/: sentinel-api.service  sentinel-worker.service
src/sentinel/: bootstrap.py  cli.py  config.py  worker.py
src/sentinel/api/: dependencies.py  (+2 more)
tests/: conftest.py
tests/e2e/: test_configuration_api.py  test_dashboard.py  test_discovery_api.py  test_health.py  test_integrity_api.py  test_intelligence_api.py  test_inventory_api.py  test_observe_mode.py  test_whm_plugin_bridge.py  test_wordpress_api.py
tests/integration/: test_auto_quarantine.py  test_cli.py  test_configuration_scanner.py  test_cpanel_reader.py  test_extension_scanner.py  test_file_scanner.py  test_filesystem_file_remediator.py  test_local_file_remediator.py  test_middleware.py  test_mime.py  test_php_malware_scanner.py  test_temp_file_scanner.py  test_validation.py  test_wordpress_core_checksums_client.py  test_wordpress_cron_scanner.py  test_wordpress_detector.py  test_wordpress_forensic_scanner.py  test_wordpress_installation_detector.py
whm-plugin/: kloudsentinel.conf
whm-plugin/cgi-bin/: index.cgi
(+162 files in other folders)
