[project]
name = "sentinel-core"
version = "1.0.0"
description = "Kloud101 AI Sentinel — Core Monitoring Engine (on-host agent)"
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "aiosqlite>=0.20,<1.0",
    "alembic>=1.14,<2.0",
    "structlog>=24.4,<25.0",
    "apscheduler>=3.10,<4.0",
    "httpx>=0.27,<1.0",
    "typer>=0.13,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=6.0,<7.0",
    "ruff>=0.7,<1.0",
    "mypy>=1.13,<2.0",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["E501", "UP046"]

[tool.ruff.lint.isort]
known-first-party = ["sentinel"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.coverage.run]
# Scoped to domain + application per the SRS NFR ("Test coverage >= 85% on
# domain and application layers"). Infrastructure/API coverage is tracked
# but not gated the same way — most of it is I/O plumbing exercised more
# meaningfully by integration/e2e tests than by a blanket line-coverage bar.
source = ["src/sentinel/domain", "src/sentinel/application"]
